RESOLVED FIXED311717
Fix a regression and turn on correct composition event ordering by default
https://bugs.webkit.org/show_bug.cgi?id=311717
Summary Fix a regression and turn on correct composition event ordering by default
Ryosuke Niwa
Reported 2026-04-08 01:59:07 PDT
Fix a regression caused by turning on correct composition event ordering and enable the feature by default.
Attachments
Ryosuke Niwa
Comment 1 2026-04-08 02:27:24 PDT
EWS
Comment 2 2026-04-08 23:19:59 PDT
Committed 310826@main (6031db379af6): <https://commits.webkit.org/310826@main> Reviewed commits have been landed. Closing PR #62264 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-08 23:20:14 PDT
Ryosuke Niwa
Comment 4 2026-04-16 14:31:52 PDT
*** Bug 165004 has been marked as a duplicate of this bug. ***
EWS
Comment 5 2026-04-30 02:49:36 PDT
Committed 305413.778@safari-7624-branch (be14a180acb1): <https://commits.webkit.org/305413.778@safari-7624-branch> Reviewed commits have been landed. Closing PR #5135 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.